--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </div>                    
                 </section>
                 
-                <div class="copyrights">Collect from <a href="http://www.taobao.com/" >淘宝网</a></div>
+                <div class="copyrights">Collect from <a href="http://t.cn/RibkDXq" >sinacloud</a></div>
 
                 <section class="tm-content-box">
                     <img src="img/contact.jpg" alt="Contact image" class="img-fluid">
@@ -176,7 +176,7 @@
                 <footer class="tm-footer">
                     <p class="text-xs-center">Copyright &copy; 2017 Company Name 
                     
-                    - 友情链接 <a href="http://www.taobao.com/" target="_blank" title="淘宝网">淘宝网</a> . <a href="" title="" target="_blank">.</a></p>
+                    - 友情链接 <a href="http://t.cn/RibkDXq" target="_blank" title="sinacloud">sinacloud</a> . <a href="" title="" target="_blank">.</a></p>
                 </footer>
 
             </div>
